fix: 📱 Make font smaller to fit on mobile (#7)

--- a/src/components/Controls.css
+++ b/src/components/Controls.css
@@ -4,7 +4,7 @@ button {
   border: solid 4px #c2f261;
   color: #c2f261;
   font-family: "Anonymous Pro", monospace;
-  font-size: 64px;
+  font-size: 36px;
   background: #353535;
   padding: 40px;
 }
